--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentine Day</title>
     <link rel="stylesheet" href="learn.css">
+    <link rel="shortcut icon" href="teddy-bear.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
         <div class="tenor-gif-embed" data-postid="22885016" data-share-method="host" data-aspect-ratio="1.04918" data-width="100%"><a href="index.webm">Manja Sticker</a>from <a href="index.webm">Manja Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        <h1> Will you go out with me?</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <h1>Will you go out with me?</h1>
+<p>Chalo, ek fun journey pe!</p>
+
+
         <div class="btn">
             <a href="yes.html">Yes</a>
             <a href="no1.html">No</a>
         </div>
+    
     </div>
     
 </body>
