--- a/no2.html
+++ b/no2.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
         <div class="tenor-gif-embed" data-postid="16192037" data-share-method="host" data-aspect-ratio="1.23552" data-width="100%"><a href="no2.webm">Akirambow Spoiled Rabbit Sticker</a>from <a href="no2.webm">Akirambow Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        <h1> Ek aur baar Soch le! 😣</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <h1>Ek aur baar Soch le! 😣</h1>
+<p>Galat decision liya toh khud hi zimmedar hoga! 😜</p>
+
         <div class="btn">
             <a href="yes.html">Yes</a>
             <a href="no3.html">No</a>
