--- a/no3.html
+++ b/no3.html
@@ -9,8 +9,9 @@
 <body>
     <div class="container">
         <div class="tenor-gif-embed" data-postid="15974530976611222074" data-share-method="host" data-aspect-ratio="1.25962" data-width="100%"><a href="no3.webm">Peach Goma Phone Sticker</a>from <a href="no3.webm">Peach Goma Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-        <h1> Maan jaa na! Kitna bhav khayegi 😭 </h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <h1>Maan jaa na! Kitna bhav khayegi 😭</h1>
+<p>Itna attitude toh Zomato wale bhi nahi dikhate! 😅</p>
+
         <div class="btn">
             <a href="yes.html">Yes</a>
             <a href="#" id="move-random">No</a>
